# VibeSeq

./: .env.example  .gitignore  README.md  THIRD_PARTY_NOTICES.md  electron-builder.yml  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
colab/: README.md  VibeSeq_T4.ipynb  auth_bootstrap.py  run_studio.py  test_run_studio.py
desktop/: cuda-runtime-installer.cjs  cuda-runtime-installer.test.cjs  main.cjs  model-installer.cjs  model-installer.test.cjs  muscriptor-NOTICE.txt  muscriptor-importer.cjs  muscriptor-importer.test.cjs  muscriptor-model-bundle.json  port-selection.cjs  port-selection.test.cjs  preload.cjs  process-tree.cjs  process-tree.test.cjs  sidecar_entry.py  smoke-app.mjs  smoke-sidecar.mjs  stable-audio-NOTICE.txt  stable-audio-gpu-model-bundle.json  stable-audio-model-bundle.json  startup-flow.cjs  startup-flow.test.cjs  startup-renderer.js  startup.css  startup.html  storage-root.cjs  storage-root.test.cjs  vibeseq-inference.spec  windows-installer-policy.test.cjs
desktop/cuda-runtime/: pyproject.toml
e2e/: accessibility.spec.ts  arrangement-interactions.spec.ts  audio-render-parity.spec.ts  audio-tempo.spec.ts  audio-worklet-continuity.spec.ts  clip-source-loop.spec.ts  detail-editor-tools.spec.ts  generation-inputs.spec.ts  inference-lifecycle.spec.ts  midi-solo-reentry.spec.ts  mobile-midi-touch.spec.ts  persistence-recovery.spec.ts  project-bundle.spec.ts  real-medium.spec.ts  sound-library.spec.ts  studio.spec.ts  track-management.spec.ts  wav-worker-responsiveness.spec.ts
scripts/: assert-desktop-package-model-free.mjs  build-desktop-sidecar-linux.mjs  bundle-macos-model-cache.mjs  prepare-desktop-model-runtime.mjs  prepare-muscriptor-release.mjs  prepare-muscriptor-release.test.mjs  prepare-stable-audio-gpu-release.mjs  prepare-stable-audio-gpu-release.test.mjs  run-capacity-benchmark.mjs  run-inference.ps1  run-inference.sh  sync-midi-instruments.mjs  validate-media.mjs
server/: README.md  desktop-linux-requirements.txt  desktop-linux.in  pyproject.toml
server/tests/: test_adapters.py  test_api.py  test_config.py  test_cuda_service.py  test_cuda_worker_processes.py  test_jobs.py  test_main.py  test_readiness.py  test_signal_and_midi.py  test_stable_audio_mlx.py  test_stable_audio_tflite.py  test_storage_paths.py  test_worker_process.py
server/vibeseq_inference/: __init__.py  __main__.py  app.py  audio.py  config.py  cuda_service.py  cuda_service_client.py  devices.py  jobs.py  midi.py  model_manifest.py  models.py  muscriptor_cuda.py  muscriptor_cuda_worker.py  readiness.py  security.py  stable_audio_config.py  stable_audio_cuda.py  stable_audio_cuda_worker.py  stable_audio_mlx.py  stable_audio_mlx_worker.py  stable_audio_tflite.py  stable_audio_tflite_worker.py  storage.py  storage_paths.py  worker_process.py
server/vibeseq_inference/providers/: __init__.py  base.py  factory.py  muscriptor.py  procedural.py  signal.py  stable_audio.py
src/: App.tsx  (+4 more)
(+178 files in other folders)
