[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vibeseq-windows-cuda-runtime"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
  "stable-audio-3 @ https://github.com/Stability-AI/stable-audio-3/archive/b32763cf3b71c160f10a0daa4fa0e0d471b5772e.zip",
  "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.4.19/flash_attn-2.8.3%2Bcu126torch2.7-cp312-cp312-win_amd64.whl",
  "sentencepiece>=0.2,<1",
  "platformdirs>=4.3,<5",
  "hatchling>=1.27",
  "torch==2.7.1",
  "torchaudio==2.7.1",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
environments = ["sys_platform == 'win32'"]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
